; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/um/drivers/extr_pcap_kern.c_pcap_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/um/drivers/extr_pcap_kern.c_pcap_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }
%struct.uml_net_private = type { i32 }
%struct.pcap_data = type { i32 }

@ETH_HEADER_OTHER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.sk_buff*, %struct.uml_net_private*)* @pcap_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcap_read(i32 %0, %struct.sk_buff* %1, %struct.uml_net_private* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.sk_buff*, align 8
  %6 = alloca %struct.uml_net_private*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.sk_buff* %1, %struct.sk_buff** %5, align 8
  store %struct.uml_net_private* %2, %struct.uml_net_private** %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %9 = call i32 @skb_mac_header(%struct.sk_buff* %8)
  %10 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %11 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @ETH_HEADER_OTHER, align 8
  %16 = add nsw i64 %14, %15
  %17 = load %struct.uml_net_private*, %struct.uml_net_private** %6, align 8
  %18 = getelementptr inbounds %struct.uml_net_private, %struct.uml_net_private* %17, i32 0, i32 0
  %19 = bitcast i32* %18 to %struct.pcap_data*
  %20 = call i32 @pcap_user_read(i32 %7, i32 %9, i64 %16, %struct.pcap_data* %19)
  ret i32 %20
}

declare dso_local i32 @pcap_user_read(i32, i32, i64, %struct.pcap_data*) #1

declare dso_local i32 @skb_mac_header(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
